# Algorithm-Onboarding-2025

./: .gitignore  README.md
detection_pipeline/: CMakeLists.txt  package.xml
detection_pipeline/include/armor_detector/: armor_detector_node.hpp  camera_publisher_node.hpp
detection_pipeline/src/: .armor_detector.cpp.save.7.swp  .armor_detector.cpp.swm  .armor_detector.cpp.swn  .armor_detector.cpp.swo  armor_detector_node.cpp  camera_publisher_node.cpp  camera_subscriber_node.cpp
detection_pipeline/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
detection_pipeline/src/log/: latest_build
